--- a/SilverTest/SilverTest/WelcomeYou.xaml
+++ b/SilverTest/SilverTest/WelcomeYou.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:SilverTest"
         mc:Ignorable="d"
-        Title="欢迎" Height="450" Width="800" WindowStartupLocation="CenterScreen" ResizeMode="NoResize">
+        Title="欢迎" Height="450" Width="800" WindowStartupLocation="CenterScreen" ResizeMode="NoResize" Loaded="welecomeWindow_Loaded">
     <Grid x:Name="grid">
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="365*"/>
@@ -14,27 +14,18 @@
         <GroupBox x:Name="groupBox" HorizontalAlignment="Left" Height="{Binding ActualHeight, ElementName=grid, Mode=OneWay}" Margin="0,0,0,0" VerticalAlignment="Top" Width="{Binding ActualWidth, ElementName=grid, Mode=OneWay}" Grid.ColumnSpan="2">
             <StackPanel HorizontalAlignment="Left" Height="{Binding ActualHeight, ElementName=groupBox, Mode=OneWay}" Margin="0,0,0,0" VerticalAlignment="Top" Width="{Binding ActualWidth, ElementName=groupBox, Mode=OneWay}">
                 <DockPanel Height="70" LastChildFill="False">
-                    <Label Content="苏州市青安仪器有限公司" Height="60" DockPanel.Dock="Top" FontSize="36" HorizontalAlignment="Center" FontStretch="Medium" FontFamily="./#仿宋_GB2312"  Foreground="Aqua"
-                           FontWeight="DemiBold" FontStyle="Oblique" Margin="0,20,0,0">
+                    <Label Content="苏州市青安仪器有限公司" Height="60" DockPanel.Dock="Top" FontSize="36" HorizontalAlignment="Center" FontStretch="Medium"  Foreground="Aqua"
+                           FontWeight="DemiBold" Margin="0,20,0,0">
                     </Label>
-
-
                 </DockPanel>
-                <Label Content="R2.2" Margin="701,0,35,0"/>
-                <DockPanel Height="200" LastChildFill="False" Margin="0,0,10,0">
-                    <Image Width="300" DockPanel.Dock="Left" Source="images/zong1.bmp" Margin="30,0,0,0"></Image>
-                    <StackPanel Margin="0,0,30,0" Width="300" DockPanel.Dock="Right" >
-                        <Label Content="QM201" FontSize="25" Margin="0,10,0,0" Foreground="Blue" FontWeight="DemiBold" />
-                        <Label Content="荧光测试仪器" FontSize="25" Margin="0,10,0,0" Foreground="Blue" FontWeight="DemiBold"/>
-                        <Label Content="带蠕动泵" FontSize="25" Margin="0,10,0,0" Foreground="Blue" FontWeight="DemiBold"/>
+                <DockPanel Height="299" LastChildFill="False" Margin="0,0,10,0">
+                    <Image Width="300" DockPanel.Dock="Left" Source="images/zong1.bmp" Margin="50,0,0,0"></Image>
+                    <StackPanel Margin="0,50,30,50" Width="300" DockPanel.Dock="Right" >
+                        <Label Content="QM201" FontSize="25" Margin="0,10,0,0"  FontWeight="DemiBold" />
+                        <Label Content="荧光测试仪器" FontSize="25" Margin="0,10,0,0" FontWeight="DemiBold"/>
+                        <Label Content="带蠕动泵" FontSize="25" Margin="0,10,0,0" FontWeight="DemiBold"/>
                     </StackPanel>
                 </DockPanel>
-                <StackPanel Height="100" Orientation="Horizontal" Margin="0,0,10,0">
-                    <Label Content="软件设计小组" Margin="20,0,0,0" VerticalAlignment="Bottom" FontSize="20"/>
-                    <Label Content="2018.5" Margin="0,0,0,0" VerticalAlignment="Bottom" FontSize="20"/>
-                    <Button Content="确定" Width="75" Height="40" Margin="450,0,0,0" VerticalAlignment="Bottom" Click="Button_Click"/>
-
-                </StackPanel>
 
             </StackPanel>
         </GroupBox>
