--- a/SilverTest/SilverTest/MainWindow.xaml
+++ b/SilverTest/SilverTest/MainWindow.xaml
@@ -64,6 +64,7 @@
                 <MenuItem Header="工具">
                     <MenuItem x:Name="printRmenu" Header="打印相关系数图" Click="printRmenu_Click"></MenuItem>
                     <MenuItem x:Name="modifytestmenu" Header="修改测试数据" Click="modifytestmenu_Click" ></MenuItem>
+                    <MenuItem x:Name="setportmenu" Header="设置串口" Click="setportmenu_Click"></MenuItem>
                 </MenuItem>
                 <MenuItem Header="测汞或砷" Visibility="Collapsed">
                     <MenuItem Header="测汞"></MenuItem>
@@ -115,6 +116,11 @@
                         </Button>
                         <Button x:Name="exportDotsBtn" ToolTip="输出点值" VerticalAlignment="Top" Height="30" Click="exportDotsBtn_Click">
                             <Image Source="images\exportraw.png">
+
+                            </Image>
+                        </Button>
+                        <Button x:Name="commandBtn" ToolTip="命令面板" VerticalAlignment="Top" Height="30" Click="commandBtn_Click">
+                            <Image Source="images\panel.png">
 
                             </Image>
                         </Button>
@@ -328,7 +334,7 @@
             <StatusBar Height="30" Width="{Binding ActualWidth, ElementName=dockPanel, Mode=OneWay}"
                        DockPanel.Dock="Bottom" RenderTransformOrigin="0.503,0.033">
                 <StatusBarItem>
-                    <TextBlock Text="{Binding Date.Now, Mode=OneWay, Source={StaticResource current}}"></TextBlock>
+                    <TextBlock Text="{Binding Date, Mode=OneWay, Source={StaticResource current}}"></TextBlock>
                     
                 </StatusBarItem>
              
