--- a/SilverTest/SilverTest/CommandPanelWnd.xaml
+++ b/SilverTest/SilverTest/CommandPanelWnd.xaml
@@ -8,7 +8,7 @@
         WindowStartupLocation="CenterScreen"
         ResizeMode="NoResize"
         
-        Title="命令面板" Height="500" Width="650">
+        Title="命令面板" Height="500" Width="650" Loaded="Window_Loaded">
     <Grid>
         <Canvas>
             <StackPanel Canvas.Top="40" Canvas.Left="50" Orientation="Horizontal" Width="150" Height="300">
@@ -22,11 +22,11 @@
                 </StackPanel>
                 <StackPanel Width="50" Height="300">
                     <Button x:Name="grabSampleBtn" Width="40" Height="40" Style="{StaticResource MirrorStyle}" Margin="0,0,0,5" Click="grabSampleBtn_Click"></Button>
+                    <Button x:Name="starttestBtn" Width="40" Height="40" Style="{StaticResource MirrorStyle}" Margin="0,0,0,5" Click="starttestBtn_Click"></Button>
+                    <Button x:Name="verifyBtn" Width="40" Height="40" Style="{StaticResource MirrorStyle}" Margin="0,0,0,5" Click="verifyBtn_Click"></Button>
+                    <Button x:Name="communicateBtn" Width="40" Height="40" Style="{StaticResource MirrorStyle}" Margin="0,0,0,5" Click="communicateBtn_Click"></Button>
                     <Button Width="40" Height="40" Style="{StaticResource MirrorStyle}" Margin="0,0,0,5"></Button>
-                    <Button Width="40" Height="40" Style="{StaticResource MirrorStyle}" Margin="0,0,0,5"></Button>
-                    <Button Width="40" Height="40" Style="{StaticResource MirrorStyle}" Margin="0,0,0,5"></Button>
-                    <Button Width="40" Height="40" Style="{StaticResource MirrorStyle}" Margin="0,0,0,5"></Button>
-                    <Button Width="40" Height="40" Style="{StaticResource MirrorStyle}" Margin="0,0,0,5"></Button>
+                    <Button x:Name="wash" Width="40" Height="40" Style="{StaticResource MirrorStyle}" Margin="0,0,0,5" Click="wash_Click"></Button>
                 </StackPanel>
             </StackPanel>
             <Border CornerRadius="5" BorderBrush="Gray" BorderThickness="3" Height="220" Canvas.Left="278" Canvas.Top="56" Width="261"
@@ -44,7 +44,7 @@
                                 放大倍数:
                             </Label>
                             <Label Width="90" Height="30" HorizontalAlignment="Right" HorizontalContentAlignment="Right">
-                                高压值:
+                                流量:
                             </Label>
                             <Label Width="90" Height="30" HorizontalAlignment="Right" HorizontalContentAlignment="Right">
                                 高压值:
@@ -53,10 +53,15 @@
                                 实时:
                             </Label>
                         </StackPanel>
-                        <StackPanel Width="150"></StackPanel>
+                        <StackPanel Width="150" Margin="0,5,0,0">
+                            <TextBlock x:Name="enlargeblk" Width="90" Height="30" HorizontalAlignment="Left"> 1</TextBlock>
+                            <TextBlock x:Name="fluentblk" Width="90" Height="30" HorizontalAlignment="Left"> 3</TextBlock>
+                            <TextBlock x:Name="presureblk" Width="90" Height="30" HorizontalAlignment="Left"> 2</TextBlock>
+                            <TextBlock Width="90" Height="30" HorizontalAlignment="Left"> 2</TextBlock>
+                        </StackPanel>
                     </StackPanel>
                     <StackPanel Height="50">
-                        <TextBlock Height="50" HorizontalAlignment="Center" Width="200" >
+                        <TextBlock x:Name="statustxt" Height="50" HorizontalAlignment="Center" Width="200" >
                             测试中...
                         </TextBlock>
                     </StackPanel>
@@ -68,17 +73,17 @@
                     <Label Content="参数设置" VerticalContentAlignment="Center" HorizontalContentAlignment="Right" HorizontalAlignment="Right" Height="45" />
                 </StackPanel>
                 <StackPanel Width="50" Height="50">
-                    <Button Width="40" Height="40" Style="{StaticResource MirrorStyle}" Margin="0,0,0,5"></Button>
+                    <Button x:Name="setParamBtn" Width="40" Height="40" Style="{StaticResource MirrorStyle}" Margin="0,0,0,5" Click="setParamBtn_Click"></Button>
                 </StackPanel>
             </StackPanel>
 
             <Canvas Width="400" Height="100" Canvas.Left="200" Canvas.Top="345">
-                <TextBox Height="23" Canvas.Left="10" TextWrapping="Wrap" Text="时间" Canvas.Top="17" Width="80"/>
-                <TextBox Height="23" Canvas.Left="136" TextWrapping="Wrap" Text="流量" Canvas.Top="17" Width="80"/>
-                <TextBox Height="23" Canvas.Left="136" TextWrapping="Wrap" Text="清洗时长" Canvas.Top="55" Width="80"/>
-                <TextBox Height="23" Canvas.Left="264" TextWrapping="Wrap" Text="高压" Canvas.Top="17" Width="80"/>
-                <TextBox Height="23" Canvas.Left="10" TextWrapping="Wrap" Text="放大倍速" Canvas.Top="55" Width="80"/>
-                <TextBox Height="23" Canvas.Left="264" TextWrapping="Wrap" Text="实时" Canvas.Top="55" Width="80"/>
+                <TextBox x:Name="timeParamTxt" Height="23" Canvas.Left="10" TextWrapping="Wrap" Text="时间" Canvas.Top="17" Width="80"/>
+                <TextBox x:Name="fluParamTxt" Height="23" Canvas.Left="136" TextWrapping="Wrap" Text="流量" Canvas.Top="17" Width="80"/>
+                <TextBox x:Name="washtimeParamTxt" Height="23" Canvas.Left="136" TextWrapping="Wrap" Text="清洗时长" Canvas.Top="55" Width="80"/>
+                <TextBox x:Name="presureParamTxt" Height="23" Canvas.Left="264" TextWrapping="Wrap" Text="高压" Canvas.Top="17" Width="80"/>
+                <TextBox x:Name="enlargeParamTxt" Height="23" Canvas.Left="10" TextWrapping="Wrap" Text="放大倍速" Canvas.Top="55" Width="80"/>
+                <TextBox x:Name="realtimeParamTxt" Height="23" Canvas.Left="264" TextWrapping="Wrap" Text="实时" Canvas.Top="55" Width="80"/>
             </Canvas>
 
         </Canvas>
