--- a/BasicWaveChart/BasicWaveChart/BasicWaveChart/BasicWaveChartUC.xaml
+++ b/BasicWaveChart/BasicWaveChart/BasicWaveChart/BasicWaveChartUC.xaml
@@ -4,13 +4,72 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:BasicWaveChart"
-             xmlns:widget="clr-namespace:BasicWaveChart.widget" x:Class="BasicWaveChart.BasicWaveChartUC"
+             xmlns:widget="clr-namespace:BasicWaveChart.widget" 
+             x:Name="ControlContainer" 
+             x:Class="BasicWaveChart.BasicWaveChartUC"
              mc:Ignorable="d" 
-             d:DesignHeight="300" d:DesignWidth="300">
-    <Grid Background="Yellow">
-        <Button Content="Button" Margin="20,5,10,50" HorizontalAlignment="Left" Background="Red" VerticalAlignment="Top" Width="90" Height="50"/>
-
-        <widget:ZoomPanel Ratio="1:3" HorizontalAlignment="Left" Height="100" Margin="110,143,0,0" VerticalAlignment="Top" Width="100"/>
-
-    </Grid>
+             d:DesignHeight="411.888" d:DesignWidth="322.532">
+    <UserControl.Resources>
+        <DrawingBrush x:Key="gridbrush" Viewport="0,0,50,50" ViewportUnits="Absolute" TileMode="Tile">
+            <DrawingBrush.Drawing>
+                <DrawingGroup>
+                    <DrawingGroup.Children>
+                        <GeometryDrawing Geometry="M0,0 L50,0">
+                            <GeometryDrawing.Pen>
+                                <Pen Thickness="2" Brush="LightGreen"/>
+                            </GeometryDrawing.Pen>
+                        </GeometryDrawing>
+                        <GeometryDrawing Geometry="M0,10 L50,10">
+                            <GeometryDrawing.Pen>
+                                <Pen Thickness="1" Brush="LightGreen"/>
+                            </GeometryDrawing.Pen>
+                        </GeometryDrawing>
+                        <GeometryDrawing Geometry="M0,20 L50,20">
+                            <GeometryDrawing.Pen>
+                                <Pen Thickness="1" Brush="LightGreen"/>
+                            </GeometryDrawing.Pen>
+                        </GeometryDrawing>
+                        <GeometryDrawing Geometry="M0,30 L50,30">
+                            <GeometryDrawing.Pen>
+                                <Pen Thickness="1" Brush="LightGreen"/>
+                            </GeometryDrawing.Pen>
+                        </GeometryDrawing>
+                        <GeometryDrawing Geometry="M0,40 L50,40">
+                            <GeometryDrawing.Pen>
+                                <Pen Thickness="1" Brush="LightGreen"/>
+                            </GeometryDrawing.Pen>
+                        </GeometryDrawing>
+                        <GeometryDrawing Geometry="M0,0 L0,50">
+                            <GeometryDrawing.Pen>
+                                <Pen Thickness="2" Brush="LightGreen"/>
+                            </GeometryDrawing.Pen>
+                        </GeometryDrawing>
+                        <GeometryDrawing Geometry="M10,0 L10,50">
+                            <GeometryDrawing.Pen>
+                                <Pen Thickness="1" Brush="LightGreen"/>
+                            </GeometryDrawing.Pen>
+                        </GeometryDrawing>
+                        <GeometryDrawing Geometry="M20,0 L20,50">
+                            <GeometryDrawing.Pen>
+                                <Pen Thickness="1" Brush="LightGreen"/>
+                            </GeometryDrawing.Pen>
+                        </GeometryDrawing>
+                        <GeometryDrawing Geometry="M30,0 L30,50">
+                            <GeometryDrawing.Pen>
+                                <Pen Thickness="1" Brush="LightGreen"/>
+                            </GeometryDrawing.Pen>
+                        </GeometryDrawing>
+                        <GeometryDrawing Geometry="M40,0 L40,50">
+                            <GeometryDrawing.Pen>
+                                <Pen Thickness="1" Brush="LightGreen"/>
+                            </GeometryDrawing.Pen>
+                        </GeometryDrawing>
+                    </DrawingGroup.Children>
+                </DrawingGroup>
+            </DrawingBrush.Drawing >
+        </DrawingBrush>
+    </UserControl.Resources>
+    <widget:ZoomPanel x:Name="zoompanel" Ratio="{Binding RatioS, ElementName=ControlContainer}" >
+        <Canvas Background="{StaticResource gridbrush}"></Canvas>
+    </widget:ZoomPanel>
 </UserControl>
