加入xaxisctl yaxisctl zoompanel

--- a/BasicWaveChart/BasicWaveChart/BasicWaveChart/BasicWaveChartUC.xaml
+++ b/BasicWaveChart/BasicWaveChart/BasicWaveChart/BasicWaveChartUC.xaml
@@ -77,6 +77,8 @@
                     <TranslateTransform Y="{Binding ActualHeight, ElementName=canvas, Mode=OneWay}"/>
                 </TransformGroup>
             </Canvas.RenderTransform>
+            <widget:YAxisCtl Stroke="Red" StrokeThickness="1" Width="30" Height="{Binding ActualHeight, ElementName=canvas, Mode=OneWay}"  />
+            <widget:XAxisCtl Stroke="Black" StrokeThickness="1" Height="30" Width="{Binding ActualWidth, ElementName=canvas, Mode=OneWay}" />
         </Canvas>
     </widget:ZoomPanel>
 </UserControl>
