--- a/BasicWaveChart/BasicWaveChart/test/MainWindow.xaml
+++ b/BasicWaveChart/BasicWaveChart/test/MainWindow.xaml
@@ -4,13 +4,19 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:test"
-        xmlns:BasicWaveChart="clr-namespace:BasicWaveChart;assembly=BasicWaveChart" x:Class="test.MainWindow"
+        xmlns:BasicWaveChart="clr-namespace:BasicWaveChart;assembly=BasicWaveChart" xmlns:widget="clr-namespace:BasicWaveChart.widget;assembly=BasicWaveChart" x:Class="test.MainWindow"
         mc:Ignorable="d"
         Title="MainWindow" Height="650" Width="800">
     <Grid>
-        <BasicWaveChart:BasicWaveChartUC x:Name="wc"  RatioS="1:2" HorizontalAlignment="Left" Height="378" Margin="181,34,0,0" VerticalAlignment="Top" Width="560"/>
+        <BasicWaveChart:BasicWaveChartUC x:Name="wc"  RatioS="1:2" 
+                                         HorizontalAlignment="Left" Height="250" Margin="181,34,0,0" 
+                                         TopBlankZone="20"
+                                         RightBlankZone="30"
+                                         VerticalAlignment="Top" Width="400"/>
         <Button Content="right" HorizontalAlignment="Left" Height="38" Margin="75,158,0,0" VerticalAlignment="Top" Width="87" Click="Button_Click"/>
         <Button Content="narrow" HorizontalAlignment="Left" Height="38" Margin="75,229,0,0" VerticalAlignment="Top" Width="87" Click="Button_Click_1"/>
+
+        <widget:Star Fill="#FFF4F4F5" HorizontalAlignment="Left" Height="152" Margin="253,457,0,0" Stroke="Black" VerticalAlignment="Top" Width="304"/>
 
     </Grid>
 </Window>
